updating readme and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
+bacteria
 bacteria_proteomes
 blast_db
 temp.fasta
 input.fasta
 blast_output.xml
 blast_output.tsv
-.~lock.blast_output.tsv#
+odb9v1_archea_fasta.tar.gz
+odb9v1_plants_fasta.tar.gz
+odb9v1_bacteria_fasta.tar.gz
+odb9v1_viridae_fasta.tar.gz
+odb9v1_fungi_fasta.tar.gz 
+odb9v2_protozoa_fasta.tar.gz
+odb9v1_metazoa_fasta.tar.gz
+ODB.sql.gz
+ODB.sql
+ODB_mod.sql
